bug squashing

--- a/src/app/beast-view/beast-view.component.css
+++ b/src/app/beast-view/beast-view.component.css
@@ -788,7 +788,7 @@ table tr th {
 }
 
 thead th {
-    background: #607d8b;
+    background: #607d8b !important;
     color: white;
     position: sticky;
     font-family: "ancient";
